--- a/package.json
+++ b/package.json
@@ -27,5 +27,12 @@
   "scripts": {
     "test": "mocha test/"
   },
-  "keywords": []
+  "keywords": [],
+  "dependencies": {
+    "pg": "~0.8.4",
+    "lingo": "0.0.5",
+    "nconf": "~0.6.4",
+    "ectypes": "1.0.0",
+    "faker2": "~0.5.0"
+  }
 }
