--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ectypes-postgres",
   "description": "An ectypes strategy for node-postgres",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/nicholas/ectypes-postgres",
   "author": {
     "name": "Nicholas Faiz",
@@ -20,7 +20,7 @@
       "url": "https://github.com/nicholas/ectypes-postgres/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "lib/ectypes-postgres",
+  "main": "lib/ectypes_postgres",
   "engines": {
     "node": "0.8.0"
   },
